# GIT-FASTAPI

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  report.html  sitemap.xml  workflow.md
.github/workflows/: deploy.yml  test.yml
about/: index.html
api/: main.py
api/reference/: index.html
getting-started/installation/: index.html
getting-started/overview/: index.html
getting-started/quick-start/: index.html
tests/: test_main.py  test_scenarios.py
tutorials/tutorial-one/: index.html
tutorials/tutorial-two/: index.html
usage/advanced/: index.html
usage/basic/: index.html
