[tool.poetry]
name = "GIT-FASTAPI"
version = "0.1.0"
description = "An enhanced FastAPI service demonstrating advanced Git workflows, CRUD operations, and automated testing with GitHub Actions."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CagriCatik/GIT-FASTAPI"
repository = "https://github.com/CagriCatik/GIT-FASTAPI"

[[tool.poetry.packages]]
include = "api"


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.2"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
